--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,5 +6,10 @@ pipeline {
         }
     }
     stages {
+        stage('compile') {
+            steps {
+                sh 'mvn compile'
+            }
+        }
     }
 }
